--- a/style.css
+++ b/style.css
@@ -5,16 +5,34 @@
     font-family: sans-serif;
 }
 
+body {
+    background: #5f2c82;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #49a09d, #5f2c82); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 .calc {
+    position: relative;
+    border: 1px solid red;
+    min-height: 100vh;
+
+}
+
+.container {
     display: grid;
+    margin-top: 2em;
     justify-content: center;
     align-content: center;
-    min-height: 80vh;
+    border: 1px solid yellow;
+    width: fit-content;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto)  repeat(5, 100px);
 }
 
-.calc .span {
+.container .span {
     grid-column: span 2;
 }
 
@@ -22,12 +40,12 @@
     grid-column: 1 / 5;
     border: 1px solid red;
     display: flex;
-    /* padding: 10px; */
     align-items: flex-end;
     flex-direction: column;
     justify-content: space-around;
     word-wrap: break-word;
     word-break: break-all;
+    padding: 10px;
 }
 
 .current {
@@ -37,3 +55,4 @@
 .previous {
     font-size: 1.2rem;
 }
+
