--- a/style.css
+++ b/style.css
@@ -2,19 +2,17 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Caveat', cursive;
 }
 
 body {
-    background: #5f2c82;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #49a09d, #5f2c82); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #ECE9E6;  
+    background: -webkit-linear-gradient(to bottom, #FFFFFF, #ECE9E6);  
+    background: linear-gradient(to bottom, #FFFFFF, #ECE9E6);
 }
 .calc {
     position: relative;
-    border: 1px solid red;
     min-height: 100vh;
-
 }
 
 .container {
@@ -22,7 +20,6 @@ body {
     margin-top: 2em;
     justify-content: center;
     align-content: center;
-    border: 1px solid yellow;
     width: fit-content;
     position: absolute;
     top: 50%;
@@ -30,6 +27,9 @@ body {
     transform: translate(-50%, -50%);
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto)  repeat(5, 100px);
+    background:rgba(0, 0, 0, 0.04); 
+    border-bottom-right-radius: 30px;
+
 }
 
 .container .span {
@@ -38,7 +38,8 @@ body {
 
 .output-screen {
     grid-column: 1 / 5;
-    border: 1px solid red;
+    border-top-right-radius: 30px;
+    background: black;
     display: flex;
     align-items: flex-end;
     flex-direction: column;
@@ -49,10 +50,26 @@ body {
 }
 
 .current {
-    font-size: 2rem;
+    font-size: 2.2rem;
+    color: white;
 }
 
 .previous {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
+    color: white;
+}
+
+.container button {
+    font-size: 1.6rem;
+    background: none;
+    border: 2px solid white;
+}
+
+.container .operation {
+    font-size: 2rem;
+}
+
+.equals {
+    border-bottom-right-radius: 30px;
 }
 
