--- a/style.css
+++ b/style.css
@@ -63,6 +63,15 @@ body {
     font-size: 1.6rem;
     background: none;
     border: 2px solid white;
+    transition: .3s ease;
+}
+
+.container button:hover{
+    background: rgba(0, 0, 0, 0.04);
+    border-radius: 15px;
+    border: none;
+    outline: none;
+
 }
 
 .container .operation {
