division by zero bug

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     transform: translate(-50%, -50%);
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto)  repeat(5, 100px);
-    background:rgba(0, 0, 0, 0.04); 
+    background:rgba(0, 0, 0, 0.02); 
     border-bottom-right-radius: 30px;
 
 }
@@ -39,7 +39,7 @@ body {
 .output-screen {
     grid-column: 1 / 5;
     border-top-right-radius: 30px;
-    background: black;
+    /* background: black; */
     display: flex;
     align-items: flex-end;
     flex-direction: column;
@@ -47,24 +47,26 @@ body {
     word-wrap: break-word;
     word-break: break-all;
     padding: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     /* font-family: 'Caveat', cursive; */
 
 }
 
 .current {
     font-size: 2.2rem;
-    color: white;
+    /* color: white; */
 }
 
 .previous {
     font-size: 1.6rem;
-    color: white;
+    /* color: white; */
 }
 
 .container button {
     font-size: 1.6rem;
     background: none;
-    border: 2px solid white;
+    border: 1px solid white;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     transition: .3s ease;
 }
 
@@ -82,5 +84,6 @@ body {
 
 .equals {
     border-bottom-right-radius: 30px;
+    border-right: 1px solid black;
 }
 
